--- a/build.gradle
+++ b/build.gradle
@@ -10,12 +10,28 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
 jar {
     manifest {
-        attributes 'Main-Class': 'com.kong.simplerunner.SimpleRunner'
+        attributes 'Main-Class': 'com.kong.simplerunner.Application'
     }
+}
+
+//create a single Jar with all dependencies
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'com.kong.simplerunner.Application'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+dependencies {
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.4.1'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.6'
+    compile 'ch.qos.logback:logback-classic:1.1.2'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
