--- a/build.gradle
+++ b/build.gradle
@@ -33,5 +33,6 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.6'
     compile 'ch.qos.logback:logback-classic:1.1.2'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
